--- a/Hands-on lab/01.md
+++ b/Hands-on lab/01.md
@@ -111,7 +111,7 @@ In this task, you will install the AdventureWorks database in SQL Server 2008 R2
 
     ![On the left side of Object Explorer, Databases is highlighted, AdventureWorksDW2008R2 is highlighted below that, and Rename is selected and highlighted in the submenu.](./media/ssms-databases-rename.png "Select Rename")
 
-17. Set the name of the database to `WorldWideImporters`.
+17. Set the name of the database to `WideWorldImporters`.
 
     ![WorldWideImporters is highlighted under Databases in Object Explorer.](./media/ssms-databases-worldwideimporters.png "Name the database")
 
