--- a/Hands-on lab/01.md
+++ b/Hands-on lab/01.md
@@ -113,7 +113,7 @@ In this task, you will install the AdventureWorks database in SQL Server 2008 R2
 
 17. Set the name of the database to `WideWorldImporters`.
 
-    ![WorldWideImporters is highlighted under Databases in Object Explorer.](./media/ssms-databases-worldwideimporters.png "Name the database")
+    ![WorldWideImporters is highlighted under Databases in Object Explorer.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-databases-wideworldimporters.png "Name the database")
 
 18. Close SSMS.
 
