--- a/Hands-on lab/02.md
+++ b/Hands-on lab/02.md
@@ -122,7 +122,7 @@ After you have reviewed the assessment results and you have ensured the database
 
 13. Once connected, expand **Databases**, and expand **WorldWideImporters**, then expand **Tables**, and observe the schema has been created.
 
-    ![In the SSMS Object Explorer, Databases, WorldWideImporters, and Tables are expanded, showing the tables created by the deploy schema script.](media/ssms-databases-worldwideimporters-tables.png "SSMS Object Explorer")
+    ![In the SSMS Object Explorer, Databases, WorldWideImporters, and Tables are expanded, showing the tables created by the deploy schema script.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-databases-wideworldimporters-tables.png "SSMS Object Explorer")
 
 ### Task 3: Create a migration project
 
