--- a/Hands-on lab/02.md
+++ b/Hands-on lab/02.md
@@ -120,13 +120,13 @@ After you have reviewed the assessment results and you have ensured the database
 
     ![The SSMS Connect to Server dialog is displayed, with the Azure SQL Database name specified, SQL Server Authentication selected, and the demouser credentials entered.](media/ssms-connect-azure-sql-database.png "Connect to Server")
 
-13. Once connected, expand **Databases**, and expand **WorldWideImporters**, then expand **Tables**, and observe the schema has been created.
+13. Once connected, expand **Databases**, and expand **WideWorldImporters**, then expand **Tables**, and observe the schema has been created.
 
-    ![In the SSMS Object Explorer, Databases, WorldWideImporters, and Tables are expanded, showing the tables created by the deploy schema script.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-databases-wideworldimporters-tables.png "SSMS Object Explorer")
+    ![In the SSMS Object Explorer, Databases, WideWorldImporters, and Tables are expanded, showing the tables created by the deploy schema script.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-databases-wideworldimporters-tables.png "SSMS Object Explorer")
 
 ### Task 3: Create a migration project
 
-In this task, you will create a new migration project for the WorldWideImporters database.
+In this task, you will create a new migration project for the WideWorldImporters database.
 
 1. Navigate to the Azure Database Migration Service in the [Azure portal](https://portal.azure.com).
 
