--- a/Hands-on lab/02.md
+++ b/Hands-on lab/02.md
@@ -167,7 +167,7 @@ In this task, you will create a new migration project for the WideWorldImporters
 
 7. On the Migration Wizard **Select source databases** blade, select WorldWideImporters.
 
-   ![The Migration Wizard Select databases blade is displayed, with the WorldWideImporters database selected.](media/dms-migration-wizard-select-databases.png "Migration Wizard Select databases")
+   ![The Migration Wizard Select databases blade is displayed, with the WorldWideImporters database selected.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/dms-migration-wizard-select-databases.png "Migration Wizard Select databases")
 
 8. Select **Save**.
 
@@ -176,9 +176,9 @@ In this task, you will create a new migration project for the WideWorldImporters
    - Select **I know my target details**.
    - **Target server name**: Enter the server name for your Azure SQL Database.
 
-     - To find the name of your SQL Database, select the WorldWideImporters SQL Database from your hands-on-lab-SUFFIX resource group in the Azure portal, and then select the **Server name** in the Essentials area of the Overview blade.
+     - To find the name of your SQL Database, select the WideWorldImporters SQL Database from your hands-on-lab-SUFFIX resource group in the Azure portal, and then select the **Server name** in the Essentials area of the Overview blade.
 
-       ![On the SQL database Overview blade, the Server name is highlighted.](media/azure-sql-database-servername.png "SQL Database Overview")
+       ![On the SQL database Overview blade, the Server name is highlighted.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/azure-sql-database-server-name.png "SQL Database Overview")
 
    - **Authentication type**: Select SQL Authentication.
    - **Username**: Enter **demouser**
@@ -213,13 +213,13 @@ In this task, you will create a new activity in the Azure Database Migration Ser
 
    ![The Migration Wizard Select target blade is displayed, with the password value highlighted.](media/dms-migration-wizard-migration-target-detail.png "Migration Wizard Select target")
 
-4. On the Migration Wizard **Map to target databases** blade, confirm that **WorldWideImporters** is checked as the source database, and that it is also the target database on the same line, then select **Save**.
+4. On the Migration Wizard **Map to target databases** blade, confirm that **WideWorldImporters** is checked as the source database, and that it is also the target database on the same line, then select **Save**.
 
-   ![The Migration Wizard Map to target database blade is displayed, with the WorldWideImporters line highlighted.](media/dms-migration-wizard-map-to-target-databases.png "Migration Wizard Map to target databases")
+   ![The Migration Wizard Map to target database blade is displayed, with the WorldWideImporters line highlighted.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/dms-migration-wizard-map-to-target-databases.png "Migration Wizard Map to target databases")
 
-5. On the Migration Wizard **Configure migration settings** blade, expand the WorldWideImporters database, verify all the tables are selected, and select **Save**.
+5. On the Migration Wizard **Configure migration settings** blade, expand the WideWorldImporters database, verify all the tables are selected, and select **Save**.
 
-   ![The Migration Wizard Configure migration settings blade is displayed, with the expand arrow for WorldWideImporters highlighted, and all the tables checked.](media/dms-migration-wizard-configure-migration-settings.png "Migration Wizard Configure migration settings")
+   ![The Migration Wizard Configure migration settings blade is displayed, with the expand arrow for WorldWideImporters highlighted, and all the tables checked.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/dms-migration-wizard-configure-migration-settings.png "Migration Wizard Configure migration settings")
 
 6. On the Migration Wizard **Summary** blade, enter the following:
 
@@ -233,11 +233,11 @@ In this task, you will create a new activity in the Azure Database Migration Ser
 
 8. Monitor the migration on the status screen that appears. Select the refresh icon in the toolbar to retrieve the latest status.
 
-   ![On the Migration job blade, the status shows the job is Running.](media/dms-migration-wizard-status-running.png "Migration with Pending status")
+   ![On the Migration job blade, the status shows the job is Running.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/dms-migration-wizard-status-running.png "Migration with Pending status")
 
 9. When the migration is complete, you will see the status as **Completed**.
 
-   ![On the Migration job blade, the status of Completed is highlighted](media/dms-migration-wizard-status-complete.png "Migration with Completed status")
+   ![On the Migration job blade, the status of Completed is highlighted](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/dms-migration-wizard-status-complete.png "Migration with Completed status")
 
 ### Task 5: Verify data migration
 
@@ -254,9 +254,9 @@ In this task, you will use SSMS to verify the database was successfully migrated
 
 2. Select **Connect**.
 
-3. In the Object Explorer, expand Databases, WorldWideImporters, and Tables, then right-click `dbo.DimCustomer`, and choose **Select Top 1000 Rows**.
+3. In the Object Explorer, expand Databases, WideWorldImporters, and Tables, then right-click `dbo.DimCustomer`, and choose **Select Top 1000 Rows**.
 
-   ![In SSMS, Databases, WorldWideImporters, and Tables are expanded, and the context menu for dbo.DimCustomer is displayed, with Select Top 1000 Rows highlighted in the menu.](media/ssms-select-top.png "Select Top 100 Rows")
+   ![In SSMS, Databases, WorldWideImporters, and Tables are expanded, and the context menu for dbo.DimCustomer is displayed, with Select Top 1000 Rows highlighted in the menu.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-select-top.png "Select Top 100 Rows")
 
 4. Observe that the query returns results, showing the data has been migrated from the on-premises SQL Server 2008 R2 database into Azure SQL Database.
 
