--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -15,7 +15,7 @@ In this exercise, you will demonstrate value from the upgrade by enabling the Ta
 3. Copy the script below, and paste it into the query window:
 
    ```sql
-   USE [WorldWideImporters]
+   USE [WideWorldImporters]
 
    -- Get the Size of the FactInternetSales table
    SELECT
@@ -39,9 +39,9 @@ In this exercise, you will demonstrate value from the upgrade by enabling the Ta
 
    ![In the SSMS results pane, the size of the uncompressed FactInternetSales table is highlighted.](media/ssms-query-results-factinternetsales-uncompressed-size.png "Query results")
 
-6. In the Object Explorer, expand Databases, WorldWideImporters, and Tables.
+6. In the Object Explorer, expand Databases, WideWorldImporters, and Tables.
 
-   ![Databases is highlighted in Object Explorer, WorldWideImporters is highlighted below that, and then Tables is highlighted below that.](./media/ssms-object-explorer-tables.png "Select Tables")
+   ![Databases is highlighted in Object Explorer, WorldWideImporters is highlighted below that, and then Tables is highlighted below that.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-object-explorer-tables.png"Select Tables")
 
 7. Right-click the `FactInternetSales` table, select the **Storage** context menu, and then select **Manage Compression** from the fly-out menu.
 
@@ -88,7 +88,7 @@ In this task, you will create a new table based on the existing `FactResellerSal
 3. Copy the script below, and paste it into the query window:
 
    ```sql
-   USE WorldWideImporters
+   USE WideWorldImporters
 
    SELECT *
    INTO ColumnStore_FactResellerSales
@@ -103,7 +103,7 @@ In this task, you will create a new table based on the existing `FactResellerSal
 5. Select **New Query** in the toolbar again, and paste the following query into the new query window. The query contains multiple parts; one to get the size of the `ColumnStore_FactResellerSales` table, a second to create a clustered ColumnStore index on the ColumnStore_FactResellerSales table, and then the size query is repeated to get the size after adding the clustered ColumnStore index.
 
    ```sql
-   USE [WorldWideImporters]
+   USE [WideWorldImporters]
 
    -- Get the Size of the ColumnStore_FactResellerSales table
    SELECT
