--- a/Hands-on lab/03.md
+++ b/Hands-on lab/03.md
@@ -41,7 +41,7 @@ In this exercise, you will demonstrate value from the upgrade by enabling the Ta
 
 6. In the Object Explorer, expand Databases, WideWorldImporters, and Tables.
 
-   ![Databases is highlighted in Object Explorer, WorldWideImporters is highlighted below that, and then Tables is highlighted below that.]https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-object-explorer-tables.png "Select Tables")
+   ![Databases is highlighted in Object Explorer, WorldWideImporters is highlighted below that, and then Tables is highlighted below that.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/ssms-object-explorer-tables.png "Select Tables")
 
 7. Right-click the `FactInternetSales` table, select the **Storage** context menu, and then select **Manage Compression** from the fly-out menu.
 
