--- a/Hands-on lab/02.md
+++ b/Hands-on lab/02.md
@@ -44,7 +44,7 @@ World Wide Importers would like an assessment to see what potential issues they 
 
 9. In the **Add sources** dialog that appears, check the box next to **WideworldImporters**, and select **Add**.
 
-   ![WorldWideImporters is selected and highlighted under SQLSERVER2008 in the Add sources dialog box.](./media/data-migration-assistant-select-sources-sqlserver2008-worldwideimporters.png "Select WorldWideImporters")
+   ![WorldWideImporters is selected and highlighted under SQLSERVER2008 in the Add sources dialog box.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/data-migration-assistant-select-sources-sqlserver2008-wideworldimporters.png "Select WorldWideImporters")
 
 10. Select **Start Assessment**.
 
@@ -108,7 +108,7 @@ After you have reviewed the assessment results and you have ensured the database
 
 9. In the **Script & deploy schema** tab, review the script, then select **Deploy schema**.
 
-   ![The Script & deploy schema tab of the Data Migration Assistant is displayed, with the generated script shown.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/data-migration-assistant-select-sources-sqlserver2008-wideworldimporters.png "Data Migration Assistant Script & deploy schema")
+   ![The Script & deploy schema tab of the Data Migration Assistant is displayed, with the generated script shown.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/data-migration-assistant-migration-script-and-deploy-schema.png "Data Migration Assistant Script & deploy schema")
 
 10. Select **Deploy schema**.
 
