--- a/Hands-on lab/02.md
+++ b/Hands-on lab/02.md
@@ -78,9 +78,9 @@ After you have reviewed the assessment results and you have ensured the database
    - **Authentication type**: Leave Windows Authentication selected.
    - **Connection properties**: Check both Encrypt connection and Trust server certificate.
    - Select **Connect**.
-   - Select **WorldWideImporters** from the list of databases.
+   - Select **WideWorldImporters** from the list of databases.
 
-   ![The Select source tab of the Data Migration Assistant is displayed, with the values specified above entered into the appropriate fields.](media/data-migration-assistant-migration-select-source.png "Data Migration Assistant Select source")
+   ![The Select source tab of the Data Migration Assistant is displayed, with the values specified above entered into the appropriate fields.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/data-migration-assistant-migration-select-source.png "Data Migration Assistant Select source")
 
 5. Select **Next**.
 
@@ -89,22 +89,22 @@ After you have reviewed the assessment results and you have ensured the database
    - **Server name**: Enter the server name of the Azure SQL Database you created during the before the hands-on lab exercise.
      - To find the name of your SQL Database, select the WorldWideImporters SQL Database from your hands-on-lab-SUFFIX resource group in the Azure portal, and then select the **Server name** in the Essentials area of the Overview blade.
 
-   ![On the SQL database Overview blade, the Server name is highlighted.](media/azure-sql-database-servername.png "SQL Database Overview")
+   ![On the SQL database Overview blade, the Server name is highlighted.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/azure-sql-database-server-name.png "SQL Database Overview")
 
    - **Authentication type**: Select SQL Server Authentication.
    - **Username**: Enter demouser.
    - **Password**: Enter Password.1!!
    - **Connection properties**: Check both Encrypt connection and Trust server certificate.
    - Select **Connect**.
-   - Select **WorldWideImporters** from the list of databases.
+   - Select **WideWorldImporters** from the list of databases.
 
-   ![The Select target tab of the Data Migration Assistant is displayed, with the values specified above entered into the appropriate fields.](media/data-migration-assistant-migration-select-target.png "Data Migration Assistant Select target")
+   ![The Select target tab of the Data Migration Assistant is displayed, with the values specified above entered into the appropriate fields.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/data-migration-assistant-migration-select-target.png "Data Migration Assistant Select target")
 
 7. Select **Next**.
 
 8. In the **Select objects** tab, leave all the objects checked, and select **Generate SQL script**.
 
-   ![The Select objects tab of the Data Migration Assistant is displayed, with all the objects checked.](media/data-migration-assistant-migration-select-objects.png "Data Migration Assistant Select target")
+   ![The Select objects tab of the Data Migration Assistant is displayed, with all the objects checked.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/data-migration-assistant-migration-select-objects.png "Data Migration Assistant Select target")
 
 9. In the **Script & deploy schema** tab, review the script, then select **Deploy schema**.
 
@@ -165,7 +165,7 @@ In this task, you will create a new migration project for the WideWorldImporters
 
 6. Select **Save**.
 
-7. On the Migration Wizard **Select source databases** blade, select WorldWideImporters.
+7. On the Migration Wizard **Select source databases** blade, select WideWorldImporters.
 
    ![The Migration Wizard Select databases blade is displayed, with the WorldWideImporters database selected.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/dms-migration-wizard-select-databases.png "Migration Wizard Select databases")
 
