--- a/Hands-on lab/02.md
+++ b/Hands-on lab/02.md
@@ -223,11 +223,9 @@ In this task, you will create a new activity in the Azure Database Migration Ser
 
 6. On the Migration Wizard **Summary** blade, enter the following:
 
-   - **Activity name**: Enter a name, such as Sql2008ToSqlDatabase.
+   - **Activity name**: Enter a name, such as DwMigration.
 
-   - **Validation option**: Select Validate my database(s), check all three Validation options, and then select **Save**.
-
-     ![The Migration Wizard summary blade is displayed, Sql2008ToSqlDatabase is entered into the name field, and Validate my database(s) is selected in the Choose validation option blade, with all three validation options selected.](media/dms-migration-wizard-migration-summary.png "Migration Wizard Summary")
+     ![The Migration Wizard summary blade is displayed, Sql2008ToSqlDatabase is entered into the name field, and Validate my database(s) is selected in the Choose validation option blade, with all three validation options selected.](https://github.com/microsoft/MCW-Data-Platform-upgrade-and-migration/blob/master/Hands-on%20lab/media/dms-migration-wizard-migration-summary.png "Migration Wizard Summary")
 
 7. Select **Run migration**.
 
