--- a/Hands-on lab/02.md
+++ b/Hands-on lab/02.md
@@ -8,7 +8,7 @@ World Wide Importers would like a Proof of Concept (POC) that moves their data w
 
 World Wide Importers would like an assessment to see what potential issues they would have to address in moving their database to Azure SQL Database.
 
-1. On the SqlServer2008 VM, download the [Data Migration Assistant v5.x](https://www.microsoft.com/download/confirmation.aspx?id=53595) and run the downloaded installer.
+1. On the SqlServer2008 VM, download the **Data Migration Assistant v5.x**, from https://www.microsoft.com/download/confirmation.aspx?id=53595 and run the downloaded installer.
 
 2. Select **Next** on each of the screens, accepting to the license terms and privacy policy in the process.
 
