--- a/Hands-on lab/04.md
+++ b/Hands-on lab/04.md
@@ -167,7 +167,7 @@ WWI has provided you with a copy of their application, including a database scri
 
 5. Now, switch back to your LabVM, and download the starter project by downloading a .zip copy of the Data Platform upgrade and migration project from the GitHub repo.
 
-6. In a web browser, navigate to the [Data Platform upgrade and migration MCW repo](https://github.com/Microsoft/MCW-Data-Platform-upgrade-and-migration)
+6. In a web browser, navigate to the Data Platform upgrade and migration MCW repo, https://github.com/Microsoft/MCW-Data-Platform-upgrade-and-migration 
 
 7. On the repo page, select **Clone or download**, then select **Download ZIP**.
 
